feat(Simple-Notes): init MainActivity

--- a/Simple-Notes/build.gradle
+++ b/Simple-Notes/build.gradle
@@ -25,6 +25,8 @@ android {
 
 }
 
+// github: https://github.com/SimpleMobileTools/Simple-Notes.git
+// commit id: a2bb922
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':Simple-Commons')
