--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
 
     ext {
-        kotlin_version = '1.3.61'
+        kotlin_version = '1.4.32'
     }
 
     repositories {
@@ -32,4 +32,25 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    minSdkVersion = 16
+    compileSdkVersion = 30
+    targetSdkVersion = 30
+    buildToolsVersion = "30.0.3"
+
+    // android
+    androidXAnnotationVersion = '1.1.0'
+    androidXAppCompatVersion = '1.3.1'
+    androidXConstraintlayoutVersion = '2.1.0'
+    androidXKTX = '1.6.0'
+
+    // test
+    testJunitVersion = '4.13.2'
+    androidXTestJunitVersion = '1.1.3'
+    androidXEspressoVersion = '3.4.0'
+
+    // google
+    googleMaterialVersion = '1.4.0'
 }
