--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,16 @@
 buildscript {
 
     ext {
-        kotlin_version = '1.3.61'
+        kotlin_version = '1.7.20'
     }
 
     repositories {
         google()
-        jcenter()
-
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.2'
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
 
@@ -25,7 +24,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
 
     }
 }
