--- a/Simple-Notes/build.gradle
+++ b/Simple-Notes/build.gradle
@@ -23,12 +23,12 @@ android {
     }
 
     namespace 'com.github.simple.notes'
-    compileSdk 33
+    compileSdk propCompileSdkVersion
 
     defaultConfig {
         applicationId "com.github.simple.notes"
-        minSdk 23
-        targetSdk 33
+        minSdk propMinSdkVersion
+        targetSdk propTargetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -62,6 +62,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation project(path: ':Simple-Commons')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
